Modified documentation to reflect the latest changes.